<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_olvide_contra"
    android:background="@color/gunmetal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_login"
        tools:layout_editor_absoluteX="-42dp"
        tools:layout_editor_absoluteY="183dp">

        <TextView
            android:id="@+id/Text_view_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="94dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="92dp"
            android:text="@string/geek_for_games"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/Edit_text_correo_login"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginStart="102dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="100dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/Button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/dark_sky_blue"
            android:autofillHints="" />

        <Button
            android:id="@+id/Button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="133dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="216dp"
            android:text="@string/cambiar_contrase_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/Button.azul"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="275dp"
            android:layout_height="47dp"
            android:layout_marginStart="181dp"
            android:layout_marginEnd="175dp"
            android:text="@string/por_favor_ingrese_su_correo_para_realizar_el_cambio_de_contrase_a"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/Edit_text_correo_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Text_view_titulo"
            app:layout_constraintVertical_bias="0.761" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>