<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal"
    tools:context=".Activity_escribir_opinion">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="57dp"
        android:background="@color/gunmetal"
        android:orientation="horizontal"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:id="@+id/Button_inicio_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Inicio"
            android:textSize="10sp"
            android:theme="@style/Button.azul"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/home"
            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded,SmallSp" />

        <Button
            android:id="@+id/Button_inicio_escribir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rese_a"
            android:theme="@style/Button.azul"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/escribir"
            tools:ignore="ButtonStyle,RtlHardcoded,SmallSp" />

        <Button
            android:id="@+id/Button_favoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favs"
            android:textSize="10sp"
            android:theme="@style/Button.azul"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/favs"
            tools:ignore="ButtonStyle,RtlHardcoded,SmallSp" />

        <Button
            android:id="@+id/Button_mapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mapa"
            android:textSize="10sp"
            android:theme="@style/Button.azul"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/maps"
            tools:ignore="ButtonStyle,RtlHardcoded,SmallSp,SpUsage" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="208dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/escriba_su_rese_a_aqu"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_opinion"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Text_opinion_nombre"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/nombre_del_juego"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/dark_sky_blue"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_opcion_op"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner_opinion"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_opinion_nombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/Button_opinion_publicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="120dp"
        android:text="Publicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="1.0"
        android:theme="@style/Button.azul"
        android:textColor="@color/white"
        tools:ignore="HardcodedText" />

    <RadioButton
        android:id="@+id/RadioButton_op_anonima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="148dp"
        android:text="Anónima"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <RadioButton
        android:id="@+id/RadioButton_op_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="48dp"
        android:text="Cuenta de usuario"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/TextView_opcion_op"
        android:layout_width="320dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="47dp"
        android:text="¿De que forma desea publicar esta opinión?"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Text_view_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="19dp"
        android:text="Cuenta"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>